[tool.poetry]
name = "test-git"
version = "0.1.1"
description = "this is a test project"
authors = ["camilodelgado23 <126426982+camilodelgado23@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
